# vora-project

./: .gitignore  PROGRESS_09APR2026.md  PROGRESS_26JAN2026.txt  PROGRESS_28JAN2026.txt  PROGRESS_30JAN2026.txt  PROJECT_REVIEW.md  Project_Info.md  QUICK_START.md  README.md  README_NEW.md  README_RUN.txt  SERVER_STATUS.md  STRUCTURE.md  STT_FIX_SUMMARY.md  VORA_TECHNICAL_SUMMARY.md  environment.yml  run_dev.sh  start_all.sh  start_dev.sh  start_http.sh  start_tailscale.sh  คำสั่ง.txt
Documents/: AI_PROMPT_GATEWAY.txt  AI_PROMPT_MYAGV.txt  AI_PROMPT_SERVER.txt  AI_PROMPT_SSH_SESSION.txt  CODE_FIXES.md  DEPLOY_NOW.txt  NETWORK_SETUP.md  README.md  SSH_MYAGV_SETUP.md  STT_LATENCY_FIXES.md  WEBAPP_SETUP.md  check_deployment.sh  mermaid_diagrams.md
Gateway/: NETWORK_OPTIONS.md  README_DEPLOY.txt  README_NAV.txt  SETUP_STATIC_IP_WINDOWS.md  command_executor_robot.py  find_myagv.py  start_gateway.sh  start_nav2_robot.sh  test_gateway.py  อ่านก่อนรัน.txt
Myagv/: AUDIT_REPORT.md  CAMERA_FIX_19FEB.txt  MOTOR_FIX_SUMMARY.md  README_MYAGV_ONLY.md  SETUP_STATIC_IP.md  TEST_FIXES.md  amcl.yaml  bt_nav_through_poses_no_backup.xml  bt_nav_to_pose_no_backup.xml  debug_camera.sh  ekf_filter_node.yaml  install_nav2_stack.sh  localization_launch.py  myagv_auto_motion_test.py  nav2_params.yaml  navigation_launch.py  odom_tf_broadcaster.py  ros_camera_pub.py  save_map.sh  send_audio_to_gateway.py  slam_toolbox_params.yaml  start_camera.sh  (+6 more)
Myagv/vora_robot_bridge/: package.xml  setup.cfg  setup.py
Myagv/vora_robot_bridge/vora_robot_bridge/: camera_bridge.py  command_executor.py
(+115 files in other folders)
